--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spinrg.boot.version>1.4.3.RELEASE</spinrg.boot.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>1.4.3.RELEASE</version>
     </parent>
 
     <dependencies>
